ispCP ω 1.0.4 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-01-07 Peter Ziergöbel
	- GUI:
		* Fixed #1994: Domain expiration in client's General information

2010-01-06 Laurent Declercq
	- PACKAGE:
		* Updates all Licenses Headers
		* Added license headers in some files
	- ENGINE:
		* Fixed #2146: Bind9 - configuration file - twice header/entries
		* Indenting code - Alignment (80 chars per line)
		* Added headers  for subroutines - (Some should be commented)
		* Code optimization - Useless invocation of subroutines get_conf()
	- SETUP
		* Fixed (partially) #2131: ispcp_network doesn't stop properly - (I'll finish later)

2010-01-06 Benedikt Heintel
	- GUI:
		* Fixed #1121: Support System (Patch by Sebastian Sellmeyer)
		* Fixed #2093: The main index.php page doesn't deal properly with ssl controlpannel (Patch by aseques)
		* Fixed #2096: Fix for iptables accounting in srv-traff (Patch by aseques)
		* Fixed #2143: When deleting the user the entry in quotalimits remains

2010-01-06 Peter Ziergöbel
	- GUI:
		* Fixed #1867: clicking on select box when adding subdomain should check corresponding radio button

2010-01-04 Christian Hernmarck
	- GUI:
		* Fixed #2142: "Subdomain add Bug" (problem of ie caused by wrong html in tpl)

2010-01-02 Peter Ziergöbel
	- GUI:
		* Fixed #2123: Add "Backup Support" in ../reseller/domain_details.php and in ../admin/domain_details.php

2009-12-31 Laurent Declercq
	- CONFIGS:
		* Fixed #2132: All ispCP init scripts must be written in Shell and use only POSIX features
	- DOCS:
		* Updated OpenSUSE INSTALL file

2009-12-30 Christian Hernmarck
	- GUI:
		* Fixed #2139: HY93 (or similar) error when deleting domain with alias
		* Fixed #2138: Deny to create the subdomains "backups" and "phptmp"

2009-12-29 Benedikt Heintel
	- GUI:
		* Fixed Error in Hosting Plan Edit
	- LANGUAGES:
		* Updated Lithuanian

2009-12-29 Christian Hernmarck
	- CONFIGS:
		* Fixed #2136: Port 465 is missing in ispcp_network daemon

2009-12-28 Marc Pujol
	- GUI: