@@ -255,7 +255,7 @@ function gen_hp(&$tpl, &$sql, $user_id) {
 
 		$traffic = get_user_traffic($domain_id);
 
-		$curr_value = $traffic[7]; // disk usage
+		$curr_value = $traffic[7] / 1048576; // convert disk usage to MB
 
 		if (!check_update_current_value($curr_value, $hp_disk)) {
 			$error_msgs[] = tr("You have more disk space in use than the new hosting plan limits.");
@@ -263,7 +263,7 @@ function gen_hp(&$tpl, &$sql, $user_id) {
 
 		$hdd_usage = tr('Disk limit') . ": " . translate_limit_value($hp_disk, true) . "<br />";
 
-		$curr_value = $traffic[6]; // total
+		$curr_value = $traffic[6] / 1048576; // convert traffic to MB
 
 		if (!check_update_current_value($curr_value, $hp_traff)) {
 			$error_msgs[] = tr("You have more traffic than the new hosting plan limits.");
@@ -479,44 +479,44 @@ function add_new_order(&$tpl, &$sql, $order_id, $user_id) {
 
 	$traffic = get_user_traffic($domain_id);
 
-	$curr_value = $traffic[7]; // disk usage
+	$curr_value = $traffic[7] / 1048576; // disk usage
 	if (!check_update_current_value($curr_value, $hp_disk)) {
-		$error_msgs[] = tr("You have more disk space in use than the new hosting plan limits");
+		$error_msgs[] = tr("You have more disk space in use than the new hosting plan limits.");
 	}
 
-	$curr_value = $traffic[6]; // total
+	$curr_value = $traffic[6] / 1048576; // total
 	if (!check_update_current_value($curr_value, $hp_traff)) {
-		$error_msgs[] = tr("You have more traffic than the new hosting plan limits");
+		$error_msgs[] = tr("You have more traffic than the new hosting plan limits.");
 	}
 
 	$curr_value = get_domain_running_als_cnt($sql, $domain_id);
 	if (!check_update_current_value($curr_value, $hp_als)) {
-		$error_msgs[] = tr("You have more aliases in use than the new hosting plan limits");
+		$error_msgs[] = tr("You have more aliases in use than the new hosting plan limits.");
 	}
 
 	$curr_value = get_domain_running_sub_cnt($sql, $domain_id);
 	if (!check_update_current_value($curr_value, $hp_sub)) {
-		$error_msgs[] = tr("You have more subdomains in use than the new hosting plan limits");
+		$error_msgs[] = tr("You have more subdomains in use than the new hosting plan limits.");
 	}
 
 	$curr_value = get_domain_running_mail_acc_cnt($sql, $domain_id);
 	if (!check_update_current_value($curr_value[0], $hp_mail)) {
-		$error_msgs[] = tr("You have more Email addresses in use than the new hosting plan limits");
+		$error_msgs[] = tr("You have more Email addresses in use than the new hosting plan limits.");
 	}
 
 	$curr_value = get_domain_running_ftp_acc_cnt($sql, $domain_id);
 	if (!check_update_current_value($curr_value[0], $hp_ftp)) {
-		$error_msgs[] = tr("You have more FTP accounts in use than the new hosting plan limits");
+		$error_msgs[] = tr("You have more FTP accounts in use than the new hosting plan limits.");
 	}
 
 	$curr_value = get_domain_running_sqld_acc_cnt($sql, $domain_id);
 	if (!check_update_current_value($curr_value, $hp_sql_db)) {
-		$error_msgs[] = tr("You have more SQL databases in use than the new hosting plan limits");
+		$error_msgs[] = tr("You have more SQL databases in use than the new hosting plan limits.");
 	}
 
 	$curr_value = get_domain_running_sqlu_acc_cnt($sql, $domain_id);
 	if (!check_update_current_value($curr_value, $hp_sql_user)) {
-		$error_msgs[] = tr("You have more SQL database users in use than the new hosting plan limits");
+		$error_msgs[] = tr("You have more SQL database users in use than the new hosting plan limits.");
 	}
 
 	if (count($error_msgs) > 0) {
